pipeline/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-dotnet8
spec:
  type: NodePort
  selector:
    app: api-dotnet8
  ports:
    - protocol: TCP
      port: 80            # Porta interna do Service
      targetPort: 8080    # Porta exposta pelo container
      nodePort: 30080     # Porta do Raspberry acessível na rede
