pipeline/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-dotnet8-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-dotnet8.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-dotnet8
                port:
                  number: 80
